# HR-Assist-using-MCP-Server

./: README.md  emails.py  main.py  pyproject.toml  sample.env
HRMS/: leave_manager.py
hrms/: ticket_manager.py
