[project]
name = "hr-assist-using-mcp"
version = "0.1.0"
description = "An AI-powered HR assistant MCP server for managing employees, leaves, meetings, and IT tickets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
